--- a/test1/test1.vcxproj
+++ b/test1/test1.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="dataTransform.cpp" />
     <ClCompile Include="entry.cpp" />
     <ClCompile Include="socketConnect.cpp" />
     <ClCompile Include="srvSock.cpp" />
